--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "vultr-v2 router to object",
   "main": "index.js",
   "scripts": {
+    "cz": "conventional-changelog -p atom -i CHANGELOG.md -s -r 0 && git add . && git status && git cz",
     "push": "npm version patch && npm publish . && git push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
